# Kiduku

./: .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.ai/: .gitignore  AGENTS.md  config.toml
.ai/docs/: doc_maintenance.md  implementation.md  index.md  mcp.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-task.yml  04-ai-dialog-report.md
.github/workflows/: ci.yml
.serena/: project.yml
crates/validate_macro/: Cargo.toml
crates/validate_macro/src/: lib.rs
deploy/: env.example  kiduku.service
docker/init/: 01_schema.sql
docs/: docs_architecture.md  index.md  todo.md
docs/architecture/: index.md  overview.md
docs/features/: idea.md  index.md
docs/features/dd/: mvp.md
docs/features/prd/: mvp.md
docs/onboarding/: database.md  environment.md  index.md
docs/rules/: coding.md  dependencies.md  development.md  documentation.md  git.md  index.md  issue_creation.md  security.md  testing.md
src/: lib.rs  main.rs
src/domain/model/: message.rs  mod.rs
src/domain/policy/: greeting.rs  mention_detection.rs  mod.rs  read_status_calc.rs
src/infrastructure/: db.rs
src/infrastructure/config/: mod.rs
src/interface/mapper/: input_mapper.rs
src/presentation/: discord_exec.rs  mod.rs
src/presentation/entry/: batch.rs  mod.rs  on_component.rs  on_error.rs  on_message.rs  on_message_delete.rs  on_reaction_add.rs  util.rs
src/usecase/: mod.rs
src/usecase/dto/: mod.rs
tasks/: lessons.md  todo.md
tests/entry/: mod.rs  on_error.rs  on_message.rs
(+28 files in other folders)
